[package]
name = "dlt-core"
version = "0.18.0"
authors = ["esrlabs.com"]
edition = "2021"
description = """
Parser and writer for autosar DLT Diagnostic Log and Trace
"""
license = "Apache-2.0"
repository = "https://github.com/esrlabs/dlt-core"

[dependencies]
buf_redux = { version = "0.8.4", optional = true }
byteorder = "1.4"
bytes = "1.0"
derive_more = "0.99.13"
lazy_static = "1.4"
log = "0.4"
memchr = "2.4"
nom = "7.1"
quick-xml = "0.29"
rustc-hash = "1.1"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "1.0"

[features]
default = []
statistics = [ "buf_redux" ]
debug_parser = []
serde-support = [
    "serde",
    "serde_json"
]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
dirs = "4.0"
env_logger = "0.10"
pretty_assertions = "1.3"
proptest = "1.6"
proptest-derive = "0.5"

[[bench]]
name = "dlt_benchmarks"
harness = false
