[package]
name = "dlt-core"
version = "0.19.1"
authors = ["esrlabs.com"]
edition = "2021"
description = """
Parser and writer for autosar DLT Diagnostic Log and Trace
"""
license = "Apache-2.0"
repository = "https://github.com/esrlabs/dlt-core"

[dependencies]
buf_redux = { version = "0.8.4", optional = true }
byteorder = "1.4"
bytes = "1.0"
log = "0.4"
memchr = "2.4"
nom = "7.1"
quick-xml = { version = "0.29", optional = true }
rustc-hash = { version = "2.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "1.0"

[features]
default = []
statistics = [ "buf_redux", "rustc-hash" ]
fibex_parser = [ "quick-xml" ]
debug_parser = []
serde-support = [
    "serde",
    "serde_json"
]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dev-dependencies]
buf_redux = "0.8.4"
criterion = { version = "0.4", features = ["html_reports"] }
dirs = "4.0"
env_logger = "0.10"
pretty_assertions = "1.3"
proptest = "1.6"
proptest-derive = "0.5"

[[bench]]
name = "dlt_benchmarks"
harness = false

[[example]]
name = "file_parser"
path = "examples/file_parser.rs"
