[package]
name = "dlt-core"
version = "0.20.0"
authors = ["esrlabs.com"]
edition = "2021"
description = """
Parser and writer for autosar DLT Diagnostic Log and Trace
"""
license = "Apache-2.0"
repository = "https://github.com/esrlabs/dlt-core"

[dependencies]
byteorder = "1.4"
bytes = "1.0"
futures = "0.3"
log = "0.4"
memchr = "2.4"
nom = "7.1"
quick-xml = { version = "0.29", optional = true }
rustc-hash = { version = "2.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "1.0"

[features]
debug = []
default = []
fibex = ["dep:quick-xml"]
serialization = ["dep:serde", "dep:serde_json"]
statistics = ["dep:rustc-hash"]
stream = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
dirs = "4.0"
env_logger = "0.10"
pretty_assertions = "1.3"
proptest = "1.6"
proptest-derive = "0.5"
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7", features = ["compat"] }

[[bench]]
name = "dlt_benchmarks"
harness = false

[[example]]
name = "file_parser"
path = "examples/file_parser.rs"

[[example]]
name = "file_streamer"
path = "examples/file_streamer.rs"
required-features = ["stream"]

[[example]]
name = "dlt_statistics"
path = "examples/dlt_statistics.rs"
required-features = ["statistics"]
